force-app/main/default/objects/Transaction__c/Transaction__c.object-meta.xml
<CustomObject>
    <description>Minimal stub for the deal Transaction record (acquisitions/transactions module). Created so TestDataFactory compiles; full field set is out of scope for the IR module.</description>
    <label>Transaction</label>
    <nameField>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>TXN-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>