force-app/main/default/objects/Transaction__c/fields/Contract_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed__c</fullName>
    <label>Contract Signed</label>
    <description>Indicates whether the purchase contract for this transaction has been signed. Stub field defaulting to false.</description>
    <inlineHelpText>Check this box once the contract for this transaction has been signed.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>