force-app/main/default/objects/Transaction__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Optional link to the source deal Opportunity this Transaction originated from. Stub field; nullable.</description>
    <inlineHelpText>Select the deal Opportunity this transaction relates to, if applicable.</inlineHelpText>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>