force-app/main/default/objects/Transaction__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <description>Current stage of the transaction. Stored as free Text in this stub so any stage value (e.g. arbitrary strings set by TestDataFactory) is accepted without a restricted picklist.</description>
    <inlineHelpText>Enter the current stage of this transaction.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>